--- a/funtome_features.html
+++ b/funtome_features.html
@@ -63,7 +63,7 @@
 
                     <div class="header-instal">
                         <div class="instal-but">
-                            <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt="" /></a>
+                            <a href="#"><img class="instal-apple" src="img/icon/apple_icon.svg" alt="" /></a>
                             <a href="#"><img class="instal-google" src="img/icon/google_icon.svg" alt="" /></a>
                         </div>
                         <button class="burger" type="button" id="navToggle">
@@ -88,7 +88,7 @@
                         <div class="contetnt-subtitle">
                             <p class="text-red">Funtome Messenger</p>
                         </div>
-                        <div class="content-text">Узнайте о самых полезных и необычных<br> функциях приложения!</div>
+                        <div class="content-text">Узнайте о самых полезных<br class="tabl"> и необычных <br class="desc"> функциях приложения!</div>
                     </div>
 
                 </div>
@@ -113,18 +113,7 @@
                     <!--- Text Left -->
                     <div class="features-iteam">
                         <div class="features-photo">
-                            <img class="container-img-left" src="img/funtome-features/desc/001.png"
-                                data-type="desc"
-                                alt="features"
-                            >
-                            <img class="container-img-left" src="img/funtome-features/desc/001.png"
-                                data-type="tablet"
-                                alt="features"
-                            >
-                            <img class="container-img-left" src="img/funtome-features/mobile/001-mob-min.png"
-                                data-type="mobile"
-                                alt="features"
-                            >
+                            <img class="container-img-left" src="img/funtome-features/desc/001.png" alt="features">
                         </div>
                         <div class="features-content">
                             <div class="features-title">
@@ -184,36 +173,18 @@
                             </div>
                         </div>
                         <div class="features-photo">
-                            <img class="container-img-right" src="img/funtome-features/desc/002.png"
-                                data-type="desc"
-                                alt="features"
-                            >
-                            <img class="container-img-right" src="img/funtome-features/desc/002.png"
-                                data-type="tablet"
-                                alt="features"
-                            >
-                            <img class="container-img-right" src="img/funtome-features/mobile/002-mob-min.png"
-                                data-type="mobile"
-                                alt="features"
-                            >
+                            <div class="features-photo">
+                                <img class="container-img-right" src="img/funtome-features/desc/002.png" alt="features">
+                            </div>
                         </div>
                     </div>
 
                     <!--- Text Left -->
                     <div class="features-iteam">
                         <div class="features-photo">
-                            <img class="container-img-left" src="img/funtome-features/desc/003.png"
-                                data-type="desc"
-                                alt="features"
-                            >
-                            <img class="container-img-left" src="img/funtome-features/desc/003.png"
-                                data-type="tablet"
-                                alt="features"
-                            >
-                            <img class="container-img-left" src="img/funtome-features/mobile/003-mob-min.png"
-                                data-type="mobile"
-                                alt="features"
-                            >
+                            <div class="features-photo">
+                                <img class="container-img-left" src="img/funtome-features/desc/003.png" alt="features">
+                            </div>
                         </div>
                         <div class="features-content">
                             <div class="features-title">
@@ -273,42 +244,24 @@
                             </div>
                             <div class="butt-group">
                                 <span class="arrow-next"></span>
-                                <a href="#" class="butt butt-green-border">
+                                <a href="funtome_paki.html" class="butt butt-green-border">
                                     <span class="butt-text-green">Подробнее</span>
                                 </a>
                             </div>
                         </div>
                         <div class="features-photo">
-                            <img class="container-img-right" src="img/funtome-features/desc/004.png"
-                                data-type="desc"
-                                alt="features"
-                            >
-                            <img class="container-img-right" src="img/funtome-features/desc/004.png"
-                                data-type="tablet"
-                                alt="features"
-                            >
-                            <img class="container-img-right" src="img/funtome-features/mobile/004-mob-min.png"
-                                data-type="mobile"
-                                alt="features"
-                            >
+                            <div class="features-photo">
+                                <img class="container-img-right" src="img/funtome-features/desc/004.png" alt="features">
+                            </div>
                         </div>
                     </div>
 
                     <!--- Text Left -->
                     <div class="features-iteam">
                         <div class="features-photo">
-                            <img class="container-img-left" src="img/funtome-features/desc/005.png"
-                                data-type="desc"
-                                alt="features"
-                            >
-                            <img class="container-img-left" src="img/funtome-features/desc/005.png"
-                                data-type="tablet"
-                                alt="features"
-                            >
-                            <img class="container-img-left" src="img/funtome-features/mobile/005-mob-min.png"
-                                data-type="mobile"
-                                alt="features"
-                            >
+                            <div class="features-photo">
+                                <img class="container-img-left" src="img/funtome-features/desc/005.png" alt="features">
+                            </div>
                         </div>
                         <div class="features-content">
                             <div class="features-title">
@@ -368,36 +321,18 @@
                             </div>
                         </div>
                         <div class="features-photo">
-                            <img class="container-img-right" src="img/funtome-features/desc/006.png"
-                                data-type="desc"
-                                alt="features"
-                            >
-                            <img class="container-img-right" src="img/funtome-features/desc/006.png"
-                                data-type="tablet"
-                                alt="features"
-                            >
-                            <img class="container-img-right" src="img/funtome-features/mobile/006-mob-min.png"
-                                data-type="mobile"
-                                alt="features"
-                            >
+                            <div class="features-photo">
+                                <img class="container-img-right" src="img/funtome-features/desc/006.png" alt="features">
+                            </div>
                         </div>
                     </div>
 
                     <!--- Text Left -->
                     <div class="features-iteam">
                         <div class="features-photo">
-                            <img class="container-img-left" src="img/funtome-features/desc/007.png"
-                                data-type="desc"
-                                alt="features"
-                            >
-                            <img class="container-img-left" src="img/funtome-features/desc/007.png"
-                                data-type="tablet"
-                                alt="features"
-                            >
-                            <img class="container-img-left" src="img/funtome-features/mobile/007-mob-min.png"
-                                data-type="mobile"
-                                alt="features"
-                            >
+                            <div class="features-photo">
+                                <img class="container-img-left" src="img/funtome-features/desc/007.png" alt="features">
+                            </div>
                         </div>
                         <div class="features-content">
                             <div class="features-title">
@@ -458,25 +393,16 @@
                             </div>
                         </div>
                         <div class="features-photo">
-                            <img class="container-img-right" src="img/funtome-features/desc/008.png"
-                                data-type="desc"
-                                alt="features"
-                            >
-                            <img class="container-img-right" src="img/funtome-features/desc/008.png"
-                                data-type="tablet"
-                                alt="features"
-                            >
-                            <img class="container-img-right" src="img/funtome-features/mobile/008-mob-min.png"
-                                data-type="mobile"
-                                alt="features"
-                            >
+                            <div class="features-photo">
+                                <img class="container-img-right" src="img/funtome-features/desc/008.png" alt="features">
+                            </div>
                         </div>
                     </div>
 
                 </div>
             </div>
 
-            <div class="container-center">
+            <div class="container">
                 <div class="conditiuns">
                     <a href="#" class="style-conditions">Условия пользования</a>
                     <a href="#" class="style-conditions-pol">Политика конфиденциальности</a>
@@ -484,49 +410,52 @@
             </div>
 
         </div> <!-- content-block end -->
-    </div> <!-- end app -->
+    
 
-    <!--- Footer -->
-    <footer>
-        <div class="footer">
-            <div class="container footer-container">
+        <!--- Footer -->
+        <footer>
+            <div class="footer">
+                <div class="container footer-container">
 
-                <div class="footer-funtome">
-                    <div class="footer-icon">
-                        <img class="icon-style" src="img/icon/funtome-footer.svg" alt="">
+                    <div class="footer-funtome">
+                        <div class="footer-icon">
+                            <img class="icon-style" src="img/icon/funtome-footer.svg" alt="">
+                        </div>
+                        <div class="funtome-text">Funtome Messenger</div>
+                        <span class="arrow-next mr34"></span>
+
+                        <div class="butt-mobile">
+                            <a href="#" class="butt-apple butt-instal butt-green-border">
+                                <img class="instal-img-app" src="img/butt/butt_app.svg" alt="">
+                            </a>
+                            <a href="#" class="butt-google butt-instal butt-green-border">
+                                <img class="instal-img-google" src="img/butt/butt_google.svg" alt="">
+                            </a>
+                        </div>
+
                     </div>
-                    <div class="funtome-text">Funtome Messenger</div>
-                    <span class="arrow-next mr68"></span>
-                    <div class="butt-mobile">
-                        <a href="#" class="butt-instal butt-green-border">
-                            <img src="img/butt/butt_app.png" alt="">
-                        </a>
-                        <a href="#" class="butt-instal butt-green-border">
-                            <img src="img/butt/butt_google.png" alt="">
-                        </a>
+
+                    <div class="footer-contact">
+                        <div class="copyright">2018-2019 UAB"FlowTech Pro"</div>
+                        <div class="address">Лауру 36F, Вильнюс, Литва</div>
+                        <div class="footer-contacts">
+                            <a href="info@funtome.com" class="mail">info@funtome.com</a>
+                        </div>
                     </div>
-                </div>
 
-                <div class="footer-contact">
-                    <div class="copyright">2018-2019 UAB"FlowTech Pro"</div>
-                    <div class="address">Лауру 36F, Вильнюс, Литва</div>
-                    <div class="footer-contacts">
-                        <a href="info@funtome.com" class="mail">info@funtome.com</a>
+                    <div class="icon-social-footer">
+                        <a target="_blank" href="https://www.instagram.com/funtome.official/" class="icon-footer icon-instagram"></a>
+                        <a target="_blank" href="https://www.facebook.com/funtome.official/" class="icon-footer icon-fb"></a>
+                        <a target="_blank" href="https://vk.com/funtomemessenger/" class="icon-footer icon-vk"></a>
+                        <a target="_blank" href="https://www.youtube.com/channel/UCTxlUsq7KB_CHMGjxvY1Qqg/" class="icon-footer icon-youtube"></a>
                     </div>
+
                 </div>
+            </div> <!-- end footer -->
 
-                <div class="icon-social-footer">
-                    <a target="_blank" href="https://www.instagram.com/funtome.official/" class="icon-footer icon-instagram"></a>
-                    <a target="_blank" href="https://www.facebook.com/funtome.official/" class="icon-footer icon-fb"></a>
-                    <a target="_blank" href="https://vk.com/funtomemessenger/" class="icon-footer icon-vk"></a>
-                    <a target="_blank" href="https://www.youtube.com/channel/UCTxlUsq7KB_CHMGjxvY1Qqg/" class="icon-footer icon-youtube"></a>
-                </div>
+        </footer>
 
-            </div>
-        </div>
-
-    </footer>
-
+    </div> <!-- end app -->    
 
     <script src="/js/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
