--- a/funtome_features.html
+++ b/funtome_features.html
@@ -15,9 +15,14 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada:400,700&display=swap" rel="stylesheet">
 
+    <!-- Style CSS media -->
+    <link rel="stylesheet" href="css/media.css">
+
+    <!-- Style CSS + media home -->
     <link rel="stylesheet" href="css/home/style.css">
     <link rel="stylesheet" href="css/home/media-style.css">
-    <link rel="stylesheet" href="css/media.css">
+
+    <!-- Style CSS + media features -->
     <link rel="stylesheet" href="css/features/style-funtome-features.css">
     <link rel="stylesheet" href="css/features/media-funtome-features.css">
 
