--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     <link rel="stylesheet" href="/js/owlCarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="/js/owlCarousel/owl.theme.default.css">
 
+    <!-- Style CSS media -->
+    <link rel="stylesheet" href="css/media.css">
+
+    <!-- Style CSS + media home -->
     <link rel="stylesheet" href="css/home/style.css">
     <link rel="stylesheet" href="css/home/media-style.css">
-    <link rel="stylesheet" href="css/media.css">
 
 </head>
 
@@ -112,7 +115,7 @@
                 <a target="_blank" href="https://www.facebook.com/funtome.official/" class="icon-fixet icon-fb"></a>
                 <a target="_blank" href="https://vk.com/funtomemessenger/" class="icon-fixet icon-vk"></a>
                 <a target="_blank" href="https://www.youtube.com/channel/UCTxlUsq7KB_CHMGjxvY1Qqg/" class="icon-fixet icon-youtube"></a>
-        </div>
+            </div>
 
         </div>
 
